--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "js-cookie": "^3.0.5",
-    "next": "16.0.6",
+    "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
